--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -7,6 +7,17 @@
     <title>Django Authentication</title>
 </head>
 <body>
-    
+    <nav>
+        <li>
+            <a href="#">Login</a>
+        </li>
+                <li>
+            <a href="{% url 'logout' %}">Logout</a>
+        </li>        <li>
+            <a href="#">Register</a>
+        </li>        <li>
+            <a href="#">Profile</a>
+        </li>
+    </nav>
 </body>
 </html>
