--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -19,5 +19,13 @@
             <a href="#">Profile</a>
         </li>
     </nav>
+    <hr>
+    {% if messages %}
+    <div>
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
+    </div>
+    {% endif %}
 </body>
 </html>
