--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -30,5 +30,9 @@
         {% endfor %}
     </div>
     {% endif %}
+    
+    <form method="POST">
+        {{ login_form }}
+    </form>
 </body>
 </html>
