--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,3 +1,3 @@
 {% extends 'base.html'%}
-{% block page_title%}Home Page {% endblock %}
-{% block page_header%}Home {% endblock %}
+{% block page_title %}Home Page {% endblock %}
+{% block page_heading %}Home {% endblock %}
