--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>{% block page_heading %} {% endblock %}</h1> 
-    <nav>
+    <nav><ul>
         <li>
             <a href="{% url 'login' %}">Login</a>
         </li>
@@ -18,7 +18,7 @@
             <a href="#">Register</a>
         </li>        <li>
             <a href="#">Profile</a>
-        </li>
+        </li></ul>
     </nav>
     <hr>
     {% if messages %}
