adding registration template + register in views, urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             </li>
             {% else %}
             <li>
-                <a href="#">Register</a>
+                <a href="{% url 'register' %}">Register</a>
             </li>
             <li>
                 <a href="{% url 'login' %}">Login</a>
