option to sign in

--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -3,5 +3,6 @@
 {% block page_heading %}User Registration {% endblock %}
 {% block content%}
 Registration form will be here.
+<p>Already registered? <a href="{% url 'login' %}">Sign in.</a></p>
   
 {% endblock %}
