--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             {% if user.is_authenticated %}
 
             <li>
-                <a href="#">Profile</a>
+                <a href="{% url 'user_profile' %}">Profile</a>
             </li>
             <li>
                 <a href="{% url 'logout' %}">Logout</a>
