styling django app with bootstrap

--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,10 +1,11 @@
 {% extends 'base.html'%}
+{% load bootstrap_tags %}
 {% block page_title %}Registration Page {% endblock %}
 {% block page_heading %}User Registration {% endblock %}
 {% block content%}
     <form method="POST">
-         {% csrf_token %} {{ registration_form.as_p }}
-        <button type="submit">Register</button>
+         {% csrf_token %} {{ registration_form | as_bootstrap }}
+        <button class="btn btn-default" type="submit">Register</button>
     </form>
 <p>Already registered? <a href="{% url 'login' %}">Sign in.</a></p>
 {% endblock %}
