--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,9 +1,10 @@
 {% extends 'base.html'%}
+{% load bootstrap_tags %}
 {% block page_title %}Login Page {% endblock %}
 {% block page_heading %}User Login {% endblock %}
 {% block content%}
     <form method="POST">
-         {% csrf_token %} {{ login_form }}
+         {% csrf_token %} {{ login_form | as_bootstrap }}
         <button type="submit">Login</button>
     </form>
   <p><a href="{% url 'password_reset' %}">Forgot my password</a></p>
