--- a/templates/base.html
+++ b/templates/base.html
@@ -6,34 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block page_title %}{% endblock %}</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>{% block page_heading %} {% endblock %}</h1>
-    <nav>
-        <ul>
+    
+        <ul class="nav nav-pills nav-fill bg-light">
             {% if user.is_authenticated %}
 
-            <li>
-                <a href="{% url 'user_profile' %}">Profile</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
             </li>
-            <li>
-                <a href="{% url 'logout' %}">Logout</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
             {% else %}
-            <li>
-                <a href="{% url 'register' %}">Register</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Register</a>
             </li>
-            <li>
-                <a href="{% url 'login' %}">Login</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
             {% endif %}</ul>
-    </nav>
+    
+    <div class="jumbotron bg-white">
+    <h1>{% block page_heading %} {% endblock %}</h1>
+    
     <hr> {% if messages %}
     <div>
         {% for message in messages %} {{ message }} {% endfor %}
     </div>
     {% endif %} {% block content %}{% endblock %}
+    </div>
 </body>
 
 </html>
