--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 
 <head>
@@ -8,6 +8,7 @@
     <title>{% block page_title %}{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css" />
 </head>
 
 <body>
@@ -28,7 +29,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
-            {% endif %}</ul>
+            {% endif %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
+            </li></ul>
     
     <div class="jumbotron bg-white">
     <h1>{% block page_heading %} {% endblock %}</h1>
